all libs using new error format